# docs/swagger.json
@@ -1,258 +1,275 @@
 {
-    "swagger" : "2.0",
-    "info" : {
-      "description" : "defaultDescription",
-      "version" : "0.1",
-      "title" : "defaultTitle"
-    },
-    "paths" : {
-      "/categories" : {
-        "post" : {
-          "consumes" : [ "application/json" ],
-          "produces" : [ "application/json" ],
-          "parameters" : [ {
-            "in" : "body",
-            "name" : "body",
-            "required" : false,
+  "swagger" : "2.0",
+  "info" : {
+    "description" : "defaultDescription",
+    "version" : "0.1",
+    "title" : "defaultTitle"
+  },
+  "paths" : {
+    "/api/v1/categories/5ed6620dd04d0f73bde308fc" : {
+      "put" : {
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/Model0"
+          },
+          "x-examples" : {
+            "application/json" : "    {\r\n        \"name\": \"Action-Films\",\r\n        \"display_name\": \"Action\",\r\n        \"description\": \"The latest Action films\"\r\n    }"
+          }
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "Definition generated from Swagger Inspector",
             "schema" : {
-              "$ref" : "#/definitions/Model1"
-            },
-            "x-examples" : {
-              "application/json" : "{\n        \n        \"name\": \"Drama-Films\",\n        \"display_name\": \"Drama\",\n        \"description\": \"The latest drama films\"\n    }"
-            }
-          } ],
-          "responses" : {
-            "201" : {
-              "description" : "Definition generated from Swagger Inspector",
-              "schema" : {
-                "$ref" : "#/definitions/Model4"
-              }
-            }
-          }
-        }
-      },
-      "/products/1" : {
-        "delete" : {
-          "consumes" : [ "application/json" ],
-          "produces" : [ "application/json" ],
-          "parameters" : [ {
-            "in" : "body",
-            "name" : "body",
-            "required" : false,
-            "schema" : {
-              "$ref" : "#/definitions/Model0"
-            },
-            "x-examples" : {
-              "application/json" : "{\n        \n        \"name\": \"Drama-Films\",\n        \"display_name\": \"Drama\",\n        \"description\": \"The latest drama films\"\n    }"
-            }
-          } ],
-          "responses" : {
-            "200" : {
-              "description" : "Definition generated from Swagger Inspector",
-              "schema" : {
-                "$ref" : "#/definitions/Model6"
-              }
-            }
-          }
-        }
-      },
-      "/categories/1" : {
-        "get" : {
-          "produces" : [ "application/json" ],
-          "parameters" : [ ],
-          "responses" : {
-            "200" : {
-              "description" : "Definition generated from Swagger Inspector",
-              "schema" : {
-                "$ref" : "#/definitions/Model7"
-              }
-            }
-          }
-        },
-        "put" : {
-          "consumes" : [ "application/json" ],
-          "produces" : [ "application/json" ],
-          "parameters" : [ {
-            "in" : "body",
-            "name" : "body",
-            "required" : false,
-            "schema" : {
-              "$ref" : "#/definitions/Model2"
-            },
-            "x-examples" : {
-              "application/json" : "{\n    \"id\": 1,\n    \"name\": \"Horror-Films\",\n    \"display_name\": \"Horror\",\n    \"description\": \"The latest horror movies\"\n}"
-            }
-          } ],
-          "responses" : {
-            "200" : {
-              "description" : "Definition generated from Swagger Inspector",
-              "schema" : {
-                "$ref" : "#/definitions/Model8"
-              }
-            }
-          }
-        }
-      },
-      "/products" : {
-        "get" : {
-          "produces" : [ "application/json" ],
-          "parameters" : [ {
-            "name" : "param0",
-            "in" : "path",
-            "description" : "Example values form path are: 'categories' and 'products'",
-            "required" : true,
-            "type" : "string"
-          } ],
-          "responses" : {
-            "200" : {
-              "description" : "Definition generated from Swagger Inspector",
-              "schema" : {
-                "$ref" : "#/definitions/Model3"
-              }
+              "$ref" : "#/definitions/Model3"
             }
           }
         }
       }
     },
-    "definitions" : {
-      "Model0" : {
-        "properties" : {
-          "name" : {
-            "type" : "string"
+    "/api/v1/categories/5ed681d657ba327daa850871" : {
+      "delete" : {
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/Model1"
           },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
+          "x-examples" : {
+            "application/json" : "    {\r\n        \"name\": \"Action-Films\",\r\n        \"display_name\": \"Action\",\r\n        \"description\": \"The latest Action films\"\r\n    }"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Definition generated from Swagger Inspector",
+            "schema" : {
+              "$ref" : "#/definitions/Model4"
+            }
           }
         }
-      },
-      "Model1" : {
-        "properties" : {
-          "name" : {
-            "type" : "string"
-          },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
+      }
+    },
+    "/api/v1/categories/" : {
+      "get" : {
+        "produces" : [ "application/json" ],
+        "parameters" : [ ],
+        "responses" : {
+          "200" : {
+            "description" : "Definition generated from Swagger Inspector",
+            "schema" : {
+              "$ref" : "#/definitions/Model5"
+            }
           }
         }
-      },
-      "Model2" : {
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
+      }
+    },
+    "/products" : {
+      "post" : {
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/Model2"
           },
-          "name" : {
-            "type" : "string"
-          },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
+          "x-examples" : {
+            "application/json" : "    {\r\n        \"name\": \"Avengers\",\r\n        \"category\":\"Action\",\r\n        \"display_name\": \"Avengers End Game\",\r\n        \"description\": \"Last movie for Avengers\"\r\n    }"
+          }
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "Definition generated from Swagger Inspector",
+            "schema" : {
+              "$ref" : "#/definitions/Model6"
+            }
           }
         }
-      },
-      "Array" : {
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          }
-        }
-      },
-      "Model3" : {
-        "type" : "array",
-        "items" : {
-          "$ref" : "#/definitions/Array"
-        }
-      },
-      "Model4" : {
-        "properties" : {
-          "name" : {
-            "type" : "string"
-          },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          },
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }
-      },
-      "Model5_Array" : {
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "category" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          }
-        }
-      },
-      "Model6" : { },
-      "Model7" : {
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          }
-        }
-      },
-      "Model8" : {
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "display_name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
+      }
+    },
+    "/products/5ed6831b57ba327daa850872" : {
+      "get" : {
+        "produces" : [ "application/json" ],
+        "parameters" : [ ],
+        "responses" : {
+          "200" : {
+            "description" : "Definition generated from Swagger Inspector",
+            "schema" : {
+              "$ref" : "#/definitions/Model7"
+            }
           }
         }
       }
     }
+  },
+  "definitions" : {
+    "Model0" : {
+      "properties" : {
+        "name" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        }
+      }
+    },
+    "Model1" : {
+      "properties" : {
+        "name" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        }
+      }
+    },
+    "Model2" : {
+      "properties" : {
+        "name" : {
+          "type" : "string"
+        },
+        "category" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        }
+      }
+    },
+    "Model3" : {
+      "properties" : {
+        "_id" : {
+          "type" : "string"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "__v" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "Model4" : {
+      "properties" : {
+        "_id" : {
+          "type" : "string"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "__v" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "Array" : {
+      "properties" : {
+        "_id" : {
+          "type" : "string"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "__v" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "Model5" : {
+      "type" : "array",
+      "items" : {
+        "$ref" : "#/definitions/Array"
+      }
+    },
+    "Model6" : {
+      "properties" : {
+        "_id" : {
+          "type" : "string"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "category" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "__v" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "Model7_Array" : {
+      "properties" : {
+        "_id" : {
+          "type" : "string"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "category" : {
+          "type" : "string"
+        },
+        "display_name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "__v" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "Model7" : {
+      "type" : "array",
+      "items" : {
+        "$ref" : "#/definitions/Model7_Array"
+      }
+    }
   }
+}
