# lib/models/categories/catCollection.js
@@ -1,13 +1,13 @@
 'use strict';
 
 const Model = require('../GlobalModel');
-const schema = require('./productsSchema');
+const schema = require('./catSchema');
 
 
-class Product extends Model{
+class Category extends Model{
   constructor(){
     super(schema);
   }
 }
 
-module.exports = new Product(); 
+module.exports = new Category(); 
