# lib/models/categories/catSchema.js
@@ -4,8 +4,8 @@ const mongoose = require('mongoose');
 
 const cat = mongoose.Schema({
   name : {type: String, required: true},
-  display_name: {type: Number, required: true},
-  description: {type: Number, required: true},
+  display_name: {type: String, required: true},
+  description: {type: String, required: true},
 });
 
 module.exports = mongoose.model('cat', cat);
