# lib/models/categories/categoriesCollection.js
@@ -1,13 +1,0 @@
-'use strict';
-
-const Model = require('../GlobalModel');
-const schema = require('./categoriesSchema.js');
-
-
-class Category extends Model{
-  constructor(){
-    super(schema);
-  }
-}
-
-module.exports = new Category(); 
